Change background attachment to fixed to avoid image stretching on longer pages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,7 @@ h2 {
     width: 100%;
     background-size: cover;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
     padding: 0;
     margin: 0;
 }
